--- a/style.css
+++ b/style.css
@@ -54,11 +54,13 @@ body {
   font-family: "Cookie", cursive;
   font-size: 140px;
   color: #ba9186;
+  text-align: center;
+  
 }
 
 .title:after {
   content: attr(data-text);
-  color: #891911;
+  color: #ffaa00;
   text-shadow: 3px 3px #e8e3c7;
 }
 
@@ -75,6 +77,7 @@ body {
   justify-content: center;
   z-index: 2;
   background-color: rgba(0, 0, 0, 0.372);
+  flex-wrap: wrap;
 }
 
 .snow {
@@ -108,7 +111,7 @@ body {
 @media (max-width: 575px) {
   .main .main_content {
     column-count: 3;
-    transform: rotate(0deg) translate(0);
+    /* transform: rotate(0deg) translate(0); */
   }
 
   .title {
@@ -139,6 +142,7 @@ body {
     background-position: 500px 1000px, 400px 400px, 300px 300px;
   }
 }
+/* My code */
 .block{
   border: 10px solid red;
   height: 500px;
